--- a/index.html
+++ b/index.html
@@ -4,9 +4,41 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v6.1.1/css/all.css">
+  <link rel="stylesheet" href="style.css">
   <title>Resume</title>
 </head>
 <body>
+
   <h1>Welcome to my resume</h1>
+
+  <div class="container">
+    <div class="photo">
+      <img src="./images/mockup.avif" alt="picture of not Raphaël HOUDRY">
+    </div>
+    <div class="recap">
+      <ul class="list-inline">
+        <li>Raphaël Houdry</li>
+        <li>Fullstack developper</li>
+        <li>Lille et alentours</li>
+      </ul>
+    </div>
+    <div class="book">
+      <h3>Hello and welcome to my resume website !</h3>
+      <p>I started to code in january 2022 and joind Le Wagon's bootcamp in april.
+        <br>
+        For the Backend developpement I learned Ruby on Rails
+        For the Frontend part I learned HTML5, CSS3 and JavaScript
+      </p>
+    </div>
+
+  </div>
+
+  <footer class="footer">
+    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-linkedin"></i></a>
+    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-brands fa-github"></i></a>
+    <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
+  </footer>
+
 </body>
 </html>
