centered footer, added real photos

--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 </head>
 <body>
 
+  <script src="script.js"></script>
+
   <h1>Welcome to my resume</h1>
 
   <div class="container">
     <div class="photo">
-      <img src="./images/mockup.avif" alt="picture of not Raphaël HOUDRY">
+      <img src="./images//me.JPG" alt="picture of not Raphaël HOUDRY">
     </div>
     <div class="recap">
       <ul class="list-inline">
@@ -23,7 +25,7 @@
         <li>Lille et alentours</li>
       </ul>
     </div>
-    <div class="book">
+    <div class="bio">
       <h3>Hello and welcome to my resume website !</h3>
       <p>I started to code in january 2022 and joind Le Wagon's bootcamp in april.
         <br>
