added yes box with js

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,9 +9,8 @@
   <link rel="stylesheet" href="style.css">
   <title>Resume</title>
 </head>
-<body>
 
-  <script src="script.js"></script>
+<body>
 
   <h1>Welcome to my resume</h1>
 
@@ -25,7 +25,11 @@
         <li>Lille et alentours</li>
       </ul>
     </div>
-    <div class="bio">
+    <div class="chat">
+      <!-- <label for="name"></label> -->
+      <input type="text" id="chatbox" name="name" placeholder="Do you wish to know more about me ?">
+    </div>
+    <div class="bio hidden">
       <h3>Hello and welcome to my resume website !</h3>
       <p>I started to code in january 2022 and joind Le Wagon's bootcamp in april.
         <br>
@@ -33,7 +37,6 @@
         For the Frontend part I learned HTML5, CSS3 and JavaScript
       </p>
     </div>
-
   </div>
 
   <footer class="footer">
@@ -42,5 +45,8 @@
     <a href="http://" target="_blank" rel="noopener noreferrer"><i class="fa-solid fa-envelope"></i></a>
   </footer>
 
+  <script src="script.js"></script>
+
 </body>
+
 </html>
